# my-rust-hyper

./: .env  .gitignore  Cargo.toml  LICENSE  appsettings.json  appsettings.test.json  log4rs.dev.yml  log4rs.test.yml  log4rs.yml  manifest.yml  openapi.json  openapi.yaml
.cargo/: config
src/: handlers.rs  main.rs
src/webapi/: access.rs  collections.rs  connectors.rs  errors.rs  executors.rs  handlers.rs  macros.rs  mod.rs  models.rs  providers.rs  publishers.rs  router.rs  routes.rs  schema.rs  settings.rs  traits.rs  workers.rs
src/webapi/collections/: car.rs  error.rs  executor.rs  mod.rs  route.rs  subscription.rs  usr.rs
src/webapi/commands/: car.rs  mod.rs  route.rs
src/webapi/entities/: car.rs  error.rs  executor.rs  mod.rs  route.rs  subscription.rs  usr.rs
src/webapi/events/: executor.rs  mod.rs  route.rs
src/webapi/handlers/: car.rs  executor.rs  macros.rs  mod.rs  models.rs  route.rs  signin.rs  signup.rs  subscription.rs  usr.rs
src/webapi/replies/: car.rs  common.rs  mod.rs  route.rs
src/webapi/routes/: index.rs  mod.rs  path.rs  service.rs
src/webapi/tests/: artemis_docker.sh  database.sql  integration_tests.rs  mod.rs  mysql_db.sql  mysql_docker.sh  pg.sh  pg_db.sql  unit_tests.rs
src/webapi/tests/fakes/: car.rs  executor.rs  mod.rs  route.rs  subscription.rs  usr.rs
