[package]
name = "my-rust-hyper"
version = "0.1.0"
authors = ["dishmaev <idax@rambler.ru>"]
edition = "2018"

[features]
default = [ "postgres" ]
postgres = [ "sqlx/postgres" ]
mysql = [ "sqlx/mysql" ]

[dependencies]
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
base64 = "0.11"
dotenv = "0.15"
url = "2"
log = "0.4"
schemars = "0.7"
strum_macros = "0.18"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
log4rs = { version = "0.10", default-features = false, features = ["all_components", "file", "yaml_format"] }
sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "tls" ] }

[dev-dependencies]
rand = "0.7"