[package]
name = "my-rust-hyper"
version = "0.1.0"
authors = ["dishmaev <idax@rambler.ru>"]
edition = "2018"

[features]
default = [ "postgres" ]
postgres = [ "sqlx/postgres" ]
mysql = [ "sqlx/mysql" ]

[dependencies]
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "0.5"
base64 = "0.13"
dotenv = "0.15"
url = "2"
log = "0.4"
schemars = { version = "0.8", features = ["chrono"] }
strum = "0.19"
strum_macros = "0.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
log4rs = { version = "0.13", default-features = false, features = ["all_components", "file", "yaml_format"] }
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-rustls", "macros", "chrono" ] }

[dev-dependencies]
rand = "*"