[package]
name = "my-rust-hyper"
version = "0.1.0"
authors = ["dishmaev <idax@rambler.ru>"]
edition = "2018"

[features]
default = [ "postgres", "amqp" ]
postgres = [ "sqlx/postgres" ]
mysql = [ "sqlx/mysql" ]
amqp = [ "dove" ]

[dependencies]
futures = "0.3"
hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
base64 = "0"
dotenv = "0"
url = "2"
log = "0"
schemars = { version = "0", features = ["chrono"] }
strum = "0"
strum_macros = "0"
log4rs = "1"
dove = { version = "0", optional = true }
chrono = { version = "0", features = ["serde"] }
uuid = { version = "0", default-features = false, features = ["v4"] }
sqlx = { version = "0", default-features = false, features = [ "runtime-tokio-rustls", "macros", "chrono" ] }

[dev-dependencies]
rand = "*"